# tool-proxy

./: CLAUDE.md  DESIGN.md  LICENSE  README.md  example_usage.py  pyproject.toml  requirements-dev.txt  setup.py
litellm_plugin/: __init__.py  base.py  logger.py  registry.py
litellm_plugin/examples/: __init__.py  echo_provider.py  mock_api_provider.py  response_modifier.py
tests/: conftest.py  test_base_logger.py  test_base_provider.py  test_registry.py
tests/fixtures/: mock_litellm.py  sample_data.py
tests/test_examples/: test_echo_provider.py  test_mock_api_provider.py  test_response_modifier.py
